[project]
name = "mrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrés Méndez del Río", email = "amenrio@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mrapy = "mrapy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "sphinx>=8.2.1",
]
lint = [
    "ruff>=0.9.8",
]
